# FrankSherlock

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
_face_ab_test/docs/: BENCHMARK_CONFIG.json  RESULTS.md
_face_ab_test/scripts/: phase0_verify_env.py  phase1_detection.py
_research_ab_test/docs/: IDEA.md  IDEA2.md
docs/: RESULTS.md
releases/: v0.5.0.md
scripts/: download-onnxruntime.sh
sherlock/: PLAN.md  README.md
sherlock/backend/: README.md
sherlock/desktop/: index.html  package-lock.json  package.json  tsconfig.json
sherlock/desktop/src/: App.tsx  api.ts  app.css  styles.css  types.ts  utils.ts
sherlock/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
sherlock/desktop/src-tauri/scripts/: download-onnxruntime.sh  download-pdfium.sh  surya_ocr.py
sherlock/desktop/src-tauri/src/: classify.rs  config.rs  db.rs  error.rs  exif.rs  face.rs  lib.rs  main.rs  models.rs  pdf.rs  query_parser.rs  runtime.rs  scan.rs  similarity.rs  thumbnail.rs  video_server.rs
sherlock/desktop/src-tauri/src/platform/: clipboard.rs  gpu.rs  mod.rs  process.rs  python.rs
sherlock/desktop/src/__tests__/: fixtures.ts
sherlock/desktop/src/__tests__/components/: ConfirmDeleteModal.test.tsx  ConfirmFileDeleteModal.test.tsx  ContextMenu.test.tsx  DirectoryTree.test.tsx  FacesView.test.tsx  HelpModal.test.tsx  ImageTile.test.tsx  PdfPasswordsView.test.tsx  PdfViewer.test.tsx  (+6 more)
sherlock/desktop/src/hooks/: useContextMenuClose.ts  useGridNavigation.ts  useScanManager.ts  useSearch.ts
sherlock/desktop/src/utils/: scanEta.ts
(+44 files in other folders)
